@@ -1,7 +1,10 @@
 MD5 3cf94c60bc26a088941c247b3abcbaf7 Apache-Gallery-0.6.ebuild 1450
 MD5 50358c94d1a1ea514ffd007933cc8ce2 Apache-Gallery-0.8.ebuild 1515
-MD5 c0482cd2c9339278805f5a32e95db7aa ChangeLog 1630
-MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
-MD5 d7306e4a4568b0c242ef3b73d3ad0e4e files/apache-gallery.conf 719
+MD5 5e9baced7e5bdeaeb16aaa701a777f18 Apache-Gallery-0.8-r1.ebuild 2114
+MD5 c0c26af618dba357a87975c267d118fe ChangeLog 1843
+MD5 2a5bdc93be7720976d88be5034a17df2 metadata.xml 444
+MD5 3c77fe3e38d06f53fca962becfe10d81 files/digest-Apache-Gallery-0.8-r1 69
 MD5 f372bf3342f63c4d3a680051e80b5571 files/digest-Apache-Gallery-0.6 69
 MD5 3c77fe3e38d06f53fca962becfe10d81 files/digest-Apache-Gallery-0.8 69
+MD5 d9a1361f6d0f1dac9def27a0b57cf30c files/apache-gallery.conf 757
+MD5 862b7db14e194f66c345bdaee71e0d00 files/76_apache-gallery.conf 1461
