@@ -1,0 +1,40 @@
+##### Apache::Gallery configuration
+#
+# This is actually a virtual host definition with mod_perl directives
+# It might be a very good idea to disable mod_autoindex in apache[2].conf
+#
+
+#<VirtualHost 123.123.123.123>
+#  ServerName   gallery.yourdomain.org
+#  DocumentRoot /var/www/localhost/htdocs/data/pictures/
+#  ErrorLog     /var/log/gallery-error_log
+#  TransferLog  /var/log/gallery-access_log
+#  <IfDefine MODPERL2>
+#  PerlSetVar   GalleryTemplateDir '/var/www/localhost/Apache-Gallery/templates/default'
+#  PerlSetVar   GalleryInfo 'Picture Taken => DateTimeOriginal, Flash => Flash' 
+#  PerlSetVar   GallerySizes '640 1024 1600 2272'
+#  PerlSetVar   GalleryThumbnailSize '100x75'
+## If you have a copyright overlay image set the location of it
+#  PerlSetVar   GalleryCopyrightImage 'htdocs/c.png'
+## If you use Apache2 set the following "PerlOptions" too
+#  PerlOptions +GlobalRequest
+#  <Location />
+#   SetHandler        	modperl
+#   PerlResponseHandler Apache::Gallery
+#   Options -Indexes
+#   AllowOverride AuthConfig
+#   Order deny,allow
+#   Allow from all
+#  </Location>
+#  </IfDefine>
+## Allow access to cache
+#  <Directory /var/tmp/Apache-Gallery>
+#    Options -ALL
+#    AllowOverride None
+#    Order deny,allow
+#    Allow from all
+#  </Directory>
+## Give Apache an idea of where to find icons and css
+#  Alias /icons /var/www/localhost/icons
+#  Alias /gallery.css /var/www/localhost/Apache-Gallery/templates/default/gallery.css
+#</VirtualHost>
