@@ -1,5 +1,3 @@
-
-
 ##### Apache::Gallery configuration
 #
 # This is actually a virtual host definition with mod_perl directives
@@ -7,10 +5,10 @@
 
 #<VirtualHost 123.123.123.123>
 #  ServerName   gallery.yourdomain.org
-#  DocumentRoot /data/pictures/
-#  ErrorLog     logs/gallery-error_log
-#  TransferLog  logs/gallery-access_log
-#  PerlSetVar   GalleryTemplateDir '/etc/apache/gallery/templates'
+#  DocumentRoot /var/www/localhost/htdocs/data/pictures/
+#  ErrorLog     /var/log/gallery-error_log
+#  TransferLog  /var/log/gallery-access_log
+#  PerlSetVar   GalleryTemplateDir '/var/www/localhost/Apache-Gallery/templates'
 #  PerlSetVar   GalleryInfo 'Picture Taken => DateTimeOriginal, Flash => Flash' 
 #  PerlSetVar   GallerySizes '640 1024 1600 2272'
 #  PerlSetVar   GalleryThumbnailSize '100x75'
@@ -20,4 +18,3 @@
 #    PerlHandler       Apache::Gallery
 #  </Location>
 #</VirtualHost>
-						
